--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/1.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Header</h1>
+  <h1 class="header1">Header</h1>
    {{content}}
   <h1>Footer</h1>
 </body>
