--- a/css/main.css
+++ b/css/main.css
@@ -197,5 +197,5 @@ code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size:
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
 .header1{
-  background-color: yellow;
+  color: yellow;
 }
