--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1 class="header1">Header</h1>
+  <div class="header1"></div>
    {{content}}
-  <h1>Footer</h1>
+  <div class="footer1"></div>
 </body>
 </html>
