--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,4 @@ code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size:
 .highlight .vg { color: #008080; }
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
-.header1{
-  color: yellow;
-}
+.header1{width: 800px;height: 500px;background-color: yellow;}
