--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="header1"></div>
-   {{content}}
+  <div class="header1"><h1>头部</h1></div>
+     {{content}}
   <div class="footer1"></div>
 </body>
 </html>
