--- a/css/main.css
+++ b/css/main.css
@@ -196,4 +196,5 @@ code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size:
 .highlight .vg { color: #008080; }
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
-.header1{width: 800px;height: 500px;background-color: yellow;}
+.header1{width: 100%;height: 100px;background-color: yellow;}
+.footer1{width: 100%;height: 100px;background-color: #000;}
