--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  <div class="header1"><h1>头部</h1></div>
+  <div class="header1"><h1>第一节课</h1></div>
      {{content}}
   <div class="footer1"></div>
 </body>
