--- a/css/main.css
+++ b/css/main.css
@@ -196,5 +196,7 @@ code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size:
 .highlight .vg { color: #008080; }
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
-.header1{width: 100%;height: 100px;background-color: yellow;}
-.footer1{width: 100%;height: 100px;background-color: #000;}
+.header1{width: 100%;height: 40px;background-color: yellow;}
+.header1 h1{line-height: 100px;text-align: center;color: pink;}
+.footer1{width: 100%;height: 40px;background-color: #000;}
+body{background-color: #f5f5f5;}
