--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size:
 .highlight .vg { color: #008080; }
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
-.header1{width: 100%;height: 40px;background-color: yellow;text-align: center;}
-.header1 h1{color: pink;font-size: 20px;line-height: 40px;}
+.header1{width: 100%;height: 40px;background-color: yellow;text-align: center;line-height: 40px;}
+.header1 h1{color: pink;font-size: 10px;}
 .footer1{width: 100%;height: 40px;background-color: #000;}
 body{background-color: #f5f5f5;}
