--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,9 @@ code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size:
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
 .header1{width: 100%;height: 60px;background-color: #000;text-align: center;line-height: 40px;}
-.header1 h1{color: pink;font-size: 10px;}
+.header1 h1{color: pink;font-size: 16px;}
 .footer1{width: 100%;height: 60px;background-color: #000;}
 body{background-color: #f5f5f5;}
+.github-pages-{
+  text-align: center;color: red;
+}
