--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,6 @@ code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size:
 .header1 h1{color: pink;font-size: 16px;}
 .footer1{width: 100%;height: 60px;background-color: #000;}
 body{background-color: #f5f5f5;}
-.github-pages-{
+#github-pages-{
   text-align: center;color: red;
 }
