--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ blockquote h4 { text-align: center; margin: 0; }
 
 pre { padding: 1em; margin: .5em 0; overflow: auto; }
 
-code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size: 14px; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 26px; -moz-tab-size: 4; -o-tab-size: 4; tab-size: 4; -webkit-hyphens: none; -moz-hyphens: none; -ms-hyphens: none; hyphens: none; }
+code[class*="language-"], pre { color: #000; text-shadow: 0 1px #FFF; font-size: 12px; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 26px; -moz-tab-size: 4; -o-tab-size: 4; tab-size: 4; -webkit-hyphens: none; -moz-hyphens: none; -ms-hyphens: none; hyphens: none; }
 
 .chapter-contents pre { color: #767676; border: 1px solid #DCDCDC; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; }
 
@@ -204,5 +204,4 @@ body{background-color: #f5f5f5;}
   text-align: center;color: red;
 }
 #github{color: yellow;}
-.highlighter{margin-left: 20px;font-size: 12px;}
-.highlighter-rouge{margin-left: 20px;font-size: 12px;}
+body .highlighter-rouge{margin-left: 20px;font-size: 12px;color: #ccc;}
