--- a/css/main.css
+++ b/css/main.css
@@ -204,4 +204,4 @@ body{background-color: #f5f5f5;}
   text-align: center;color: red;
 }
 #github{color: yellow;}
-body .highlighter-rouge{margin-left: 20px;font-size: 12px;color: #ccc;}
+body .highlighter-rouge code{margin-left: 20px;font-size: 12px;color: #ccc;}
